# debate-agent

./: .env.deploy.example  .gitignore  DEPLOY_TENCENT_CLOUD.md  docker-compose.yml  render.yaml
.github/workflows/: deploy-pages.yml
backend/: .dockerignore  .env.example  Dockerfile  pyproject.toml  requirements.txt  run.py
backend/app/: config.py  main.py
backend/app/agents/: __init__.py  base.py  judgment.py  moderator.py  negative.py  positive.py
backend/app/api/: routes.py  websocket.py
backend/app/debate/: __init__.py  service.py
backend/app/research/: __init__.py
backend/app/schemas/: __init__.py  debate.py
backend/app/services/: __init__.py  debate_service.py  memory_service.py
backend/tests/: test_base_agent.py  test_config.py  test_memory_service.py  test_websocket_stream.py
docs/: parallel-agent-prompts.md
frontend/: .dockerignore  .env.example  Dockerfile  next.config.js  nginx.conf  package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/debate/: page.tsx
frontend/app/report/: page.tsx
frontend/components/: DebateForm.tsx  DebateView.tsx  ReportView.tsx  markdown-content.tsx
frontend/components/ui/: animated-border.tsx  button.tsx  card.tsx  gradient-bg.tsx  input.tsx  loading-spinner.tsx  skeleton.tsx  sparkles.tsx  text-generate.tsx  textarea.tsx
frontend/lib/: api.ts  debate-stream.ts  motion.ts
frontend/tests/: api.test.mts  debate-stream.test.mts
